# MoaResume

./: .gitignore  .reviewdog.yml  CMakeLists.txt  README.md  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: reviewdog.yml
common/: Constants.h  common.qrc
common/styles/: global.qss
common/util/: JsonFileUtils.cpp  JsonFileUtils.h
pkg/application/widget/: ApplicationWidget.cpp  ApplicationWidget.h
pkg/applicationList/: ApplicationListConstants.h  applicationList.qrc
pkg/applicationList/model/: Application.cpp  Application.h
pkg/applicationList/service/: ApplicationListService.cpp  ApplicationListService.h
pkg/applicationList/styles/: applicationList.qss
pkg/applicationList/widget/: ApplicationDetailDialog.cpp  ApplicationDetailDialog.h  ApplicationDialog.cpp  ApplicationDialog.h  ApplicationListWidget.cpp  ApplicationListWidget.h
pkg/home/: HomeConstatns.h  home.qrc
pkg/home/styles/: home.qss
pkg/home/widget/: HomeWidget.cpp  HomeWidget.h
pkg/resume/: ResumeConstants.h  ResumeHtmlBuilder.cpp  ResumeHtmlBuilder.h  resume.qrc
pkg/resume/config/: ResumeCategoryConfig.cpp  ResumeCategoryConfig.h
pkg/resume/model/: ResumeCategory.cpp  ResumeCategory.h  ResumeItem.cpp  ResumeItem.h
pkg/resume/service/: ResumeService.cpp  ResumeService.h
pkg/resume/styles/: resume.qss
pkg/resume/widget/: BasicInfoWidget.cpp  BasicInfoWidget.h  ResumeItemDialog.cpp  ResumeItemDialog.h  ResumeItemListWidget.cpp  ResumeItemListWidget.h  ResumePreviewDialog.cpp  ResumePreviewDialog.h  ResumeSidebar.cpp  ResumeSidebar.h  ResumeWidget.cpp  ResumeWidget.h
pkg/workspace/: WorkspaceConstants.h  workspace.qrc
pkg/workspace/styles/: workspace.qss
pkg/workspace/widget/: WorkspaceSidebar.cpp  WorkspaceSidebar.h  WorkspaceWidget.cpp  WorkspaceWidget.h
ui/: MainWindow.cpp  MainWindow.h  UIConstants.h
